# deepagents_sandbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docker.yml
app/: README.md  alembic.ini  main.py  openapi.py
app/alembic/: __init__.py  env.py
app/core/: __init__.py  audit.py  auth.py  cache.py  config.py  database.py  email.py  error_codes.py  errors.py  exceptions.py  langsmith.py  logging.py  memory.py  middleware.py  rate_limit.py  retry.py  security.py  security_api_key.py  storage.py  tracing.py  vector_store.py  webhook.py
app/docs/: api.md  design.md  requirements.md
app/graphql/: __init__.py  schema.py  types.py
app/i18n/: __init__.py  middleware.py
app/models/: __init__.py  api_key.py  task.py  user.py
app/routers/: __init__.py  admin.py  agent.py  apikeys.py  auth.py  example.py  files.py  metrics.py  rag.py  sse.py  tasks.py  users.py  version.py  websocket.py
app/sandbox/: agent_runner.py  multi_agent.py
app/schemas/: __init__.py  task.py  user.py
app/tasks/: __init__.py  celery_app.py  celery_config.py  flower_config.py  task_handlers.py
app/tests/: conftest.py  test_auth.py  test_memory.py  test_tasks.py  test_tasks_celery.py  (+1 more)
deepagents/: __init__.py
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
k8s/: deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
scripts/: verify_migrations.bat  verify_migrations.sh
tests/: benchmark.py
(+130 files in other folders)
